--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "bootstrap": "^4.0.0-beta.2",
     "bootstrap-sass": "^3.3.7",
     "bootstrap-vue": "^1.4.1",
+    "chart.js": "^2.7.1",
     "jquery": "^3.3.0",
     "js-cookie": "^2.2.0",
     "moment": "^2.20.1",
@@ -21,7 +22,9 @@
     "vee-validate": "^2.0.3",
     "vue": "^2.5.2",
     "vue-axios": "^2.0.2",
+    "vue-chartjs": "^3.2.1",
     "vue-router": "^3.0.1",
+    "vuejs-paginate": "^1.6.0",
     "vuex": "^3.0.1",
     "vuex-persistedstate": "^2.4.2"
   },
